--- a/docs/css/andes-font-codes.css
+++ b/docs/css/andes-font-codes.css
@@ -618,3 +618,4 @@
 .adi-clipboard-plus:before { content: '\ea68'; } /* '' */
 .adi-reply:before { content: '\ea69'; } /* '' */
 .adi-hospital-building:before { content: '\ea6a'; } /* '' */
+.adi-fullscreen:before { content: '\ea6b'; } /* '' */
