--- a/docs/css/andes-font-ie7-codes.css
+++ b/docs/css/andes-font-ie7-codes.css
@@ -618,3 +618,4 @@
 .adi-clipboard-plus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea68;&nbsp;'); }
 .adi-reply { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea69;&nbsp;'); }
 .adi-hospital-building { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea6a;&nbsp;'); }
+.adi-fullscreen { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea6b;&nbsp;'); }
