--- a/docs/css/andes-font.css
+++ b/docs/css/andes-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'andes-font';
-  src: url('../font/andes-font.eot?21377243');
-  src: url('../font/andes-font.eot?21377243#iefix') format('embedded-opentype'),
-       url('../font/andes-font.woff2?21377243') format('woff2'),
-       url('../font/andes-font.woff?21377243') format('woff'),
-       url('../font/andes-font.ttf?21377243') format('truetype'),
-       url('../font/andes-font.svg?21377243#andes-font') format('svg');
+  src: url('../font/andes-font.eot?21371595');
+  src: url('../font/andes-font.eot?21371595#iefix') format('embedded-opentype'),
+       url('../font/andes-font.woff2?21371595') format('woff2'),
+       url('../font/andes-font.woff?21371595') format('woff'),
+       url('../font/andes-font.ttf?21371595') format('truetype'),
+       url('../font/andes-font.svg?21371595#andes-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'andes-font';
-    src: url('../font/andes-font.svg?21377243#andes-font') format('svg');
+    src: url('../font/andes-font.svg?21371595#andes-font') format('svg');
   }
 }
 */
@@ -674,3 +674,4 @@
 .adi-clipboard-plus:before { content: '\ea68'; } /* '' */
 .adi-reply:before { content: '\ea69'; } /* '' */
 .adi-hospital-building:before { content: '\ea6a'; } /* '' */
+.adi-fullscreen:before { content: '\ea6b'; } /* '' */
