--- a/css/andes-icons.css
+++ b/css/andes-icons.css
@@ -1877,6 +1877,12 @@
 .adi-fullscreen:before {
   content: "\ea6b"; }
 
+.adi-star-off-outline:before {
+  content: "\ea6c"; }
+
+.adi-star-off:before {
+  content: "\ea6d"; }
+
 .adi-blank:before {
   content: "\F68C";
   visibility: hidden; }
