--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -619,4 +619,6 @@ $adi-icons: (
      "hospital-building": ea6a,
      "menos": e9fe,
      "fullscreen": ea6b,
+     "star-off-outline": ea6c,
+     "star-off": ea6d,
 );
