--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "5.5.55" !default;
+$mdi-version:          "5.6.55" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -135,6 +135,8 @@ $mdi-icons: (
   "alarm-note": F0E71,
   "alarm-note-off": F0E72,
   "alarm-off": F0023,
+  "alarm-panel": F15C4,
+  "alarm-panel-outline": F15C5,
   "alarm-plus": F0024,
   "alarm-snooze": F068E,
   "album": F0025,
@@ -585,6 +587,8 @@ $mdi-icons: (
   "barrel": F0074,
   "baseball": F0852,
   "baseball-bat": F0853,
+  "baseball-diamond": F15EC,
+  "baseball-diamond-outline": F15ED,
   "bash": F1183,
   "basket": F0076,
   "basket-fill": F0077,
@@ -730,6 +734,8 @@ $mdi-icons: (
   "biathlon": F0E14,
   "bicycle": F109C,
   "bicycle-basket": F1235,
+  "bicycle-electric": F15B4,
+  "bicycle-penny-farthing": F15E9,
   "bike": F00A3,
   "bike-fast": F111F,
   "billboard": F1010,
@@ -738,6 +744,7 @@ $mdi-icons: (
   "binoculars": F00A5,
   "bio": F00A6,
   "biohazard": F00A7,
+  "bird": F15C6,
   "bitbucket": F00A8,
   "bitcoin": F0813,
   "black-mesa": F00A9,
@@ -783,6 +790,7 @@ $mdi-icons: (
   "book-open-blank-variant": F00BE,
   "book-open-outline": F0B63,
   "book-open-page-variant": F05DA,
+  "book-open-page-variant-outline": F15D6,
   "book-open-variant": F14F7,
   "book-outline": F0B64,
   "book-play": F0E82,
@@ -1006,6 +1014,8 @@ $mdi-icons: (
   "camera-control": F0B69,
   "camera-enhance": F0101,
   "camera-enhance-outline": F0B6A,
+  "camera-flip": F15D9,
+  "camera-flip-outline": F15DA,
   "camera-front": F0102,
   "camera-front-variant": F0103,
   "camera-gopro": F07A1,
@@ -1059,6 +1069,8 @@ $mdi-icons: (
   "car-door": F0B6B,
   "car-door-lock": F109D,
   "car-electric": F0B6C,
+  "car-electric-outline": F15B5,
+  "car-emergency": F160F,
   "car-esp": F0C49,
   "car-estate": F07A8,
   "car-hatchback": F07A9,
@@ -1104,9 +1116,15 @@ $mdi-icons: (
   "card-bulleted-outline": F0B73,
   "card-bulleted-settings": F0B74,
   "card-bulleted-settings-outline": F0B75,
+  "card-minus": F1600,
+  "card-minus-outline": F1601,
+  "card-off": F1602,
+  "card-off-outline": F1603,
   "card-outline": F0B76,
   "card-plus": F11FF,
   "card-plus-outline": F1200,
+  "card-remove": F1604,
+  "card-remove-outline": F1605,
   "card-search": F1074,
   "card-search-outline": F1075,
   "card-text": F0B77,
@@ -1125,11 +1143,13 @@ $mdi-icons: (
   "cart-arrow-down": F0D66,
   "cart-arrow-right": F0C4E,
   "cart-arrow-up": F0D67,
+  "cart-check": F15EA,
   "cart-minus": F0D68,
   "cart-off": F066B,
   "cart-outline": F0111,
   "cart-plus": F0112,
   "cart-remove": F0D69,
+  "cart-variant": F15EB,
   "case-sensitive-alt": F0113,
   "cash": F0114,
   "cash-100": F0115,
@@ -1215,6 +1235,7 @@ $mdi-icons: (
   "chart-scatter-plot-hexbin": F066D,
   "chart-timeline": F066E,
   "chart-timeline-variant": F0E93,
+  "chart-timeline-variant-shimmer": F15B6,
   "chart-tree": F0E94,
   "chat": F0B79,
   "chat-alert": F0B7A,
@@ -1317,6 +1338,8 @@ $mdi-icons: (
   "cigar": F1189,
   "cigar-off": F141B,
   "circle": F0765,
+  "circle-box": F15DC,
+  "circle-box-outline": F15DD,
   "circle-double": F0E95,
   "circle-edit-outline": F08D5,
   "circle-expand": F0E96,
@@ -1530,8 +1553,12 @@ $mdi-icons: (
   "comment-eye-outline": F0A3B,
   "comment-flash": F15B0,
   "comment-flash-outline": F15B1,
+  "comment-minus": F15DF,
+  "comment-minus-outline": F15E0,
   "comment-multiple": F085F,
   "comment-multiple-outline": F0181,
+  "comment-off": F15E1,
+  "comment-off-outline": F15E2,
   "comment-outline": F0182,
   "comment-plus": F09E5,
   "comment-plus-outline": F0183,
@@ -1558,6 +1585,7 @@ $mdi-icons: (
   "compass-outline": F018C,
   "compass-rose": F1382,
   "concourse-ci": F10A0,
+  "connection": F1616,
   "console": F018D,
   "console-line": F07B7,
   "console-network": F08A9,
@@ -1703,6 +1731,7 @@ $mdi-icons: (
   "cursor-move": F01BE,
   "cursor-pointer": F01BD,
   "cursor-text": F05E7,
+  "dance-ballroom": F15FB,
   "dance-pole": F1578,
   "data-matrix": F153C,
   "data-matrix-edit": F153D,
@@ -1864,9 +1893,13 @@ $mdi-icons: (
   "doorbell": F12E6,
   "doorbell-video": F0869,
   "dot-net": F0AAE,
+  "dots-grid": F15FC,
+  "dots-hexagon": F15FF,
   "dots-horizontal": F01D8,
   "dots-horizontal-circle": F07C3,
   "dots-horizontal-circle-outline": F0B8D,
+  "dots-square": F15FD,
+  "dots-triangle": F15FE,
   "dots-vertical": F01D9,
   "dots-vertical-circle": F07C4,
   "dots-vertical-circle-outline": F0B8E,
@@ -2061,6 +2094,8 @@ $mdi-icons: (
   "eye-outline": F06D0,
   "eye-plus": F086B,
   "eye-plus-outline": F086C,
+  "eye-remove": F15E3,
+  "eye-remove-outline": F15E4,
   "eye-settings": F086D,
   "eye-settings-outline": F086E,
   "eyedropper": F020A,
@@ -2077,13 +2112,18 @@ $mdi-icons: (
   "face-profile": F0644,
   "face-profile-woman": F1076,
   "face-recognition": F0C7B,
+  "face-shimmer": F15CC,
+  "face-shimmer-outline": F15CD,
   "face-woman": F1077,
   "face-woman-outline": F1078,
+  "face-woman-shimmer": F15CE,
+  "face-woman-shimmer-outline": F15CF,
   "facebook": F020C,
   "facebook-gaming": F07DD,
   "facebook-messenger": F020E,
   "facebook-workplace": F0B31,
   "factory": F020F,
+  "family-tree": F160E,
   "fan": F0210,
   "fan-alert": F146C,
   "fan-chevron-down": F146D,
@@ -2099,6 +2139,7 @@ $mdi-icons: (
   "fast-forward-10": F0D71,
   "fast-forward-30": F0D06,
   "fast-forward-5": F11F8,
+  "fast-forward-60": F160B,
   "fast-forward-outline": F06D2,
   "fax": F0212,
   "feather": F06D3,
@@ -2254,6 +2295,7 @@ $mdi-icons: (
   "fingerprint": F0237,
   "fingerprint-off": F0EB1,
   "fire": F0238,
+  "fire-alert": F15D7,
   "fire-extinguisher": F0EF2,
   "fire-hydrant": F1137,
   "fire-hydrant-alert": F1138,
@@ -2547,10 +2589,22 @@ $mdi-icons: (
   "fridge-alert": F11B1,
   "fridge-alert-outline": F11B2,
   "fridge-bottom": F0292,
+  "fridge-industrial": F15EE,
+  "fridge-industrial-alert": F15EF,
+  "fridge-industrial-alert-outline": F15F0,
+  "fridge-industrial-off": F15F1,
+  "fridge-industrial-off-outline": F15F2,
+  "fridge-industrial-outline": F15F3,
   "fridge-off": F11AF,
   "fridge-off-outline": F11B0,
   "fridge-outline": F028F,
   "fridge-top": F0291,
+  "fridge-variant": F15F4,
+  "fridge-variant-alert": F15F5,
+  "fridge-variant-alert-outline": F15F6,
+  "fridge-variant-off": F15F7,
+  "fridge-variant-off-outline": F15F8,
+  "fridge-variant-outline": F15F9,
   "fruit-cherries": F1042,
   "fruit-cherries-off": F13F8,
   "fruit-citrus": F1043,
@@ -2653,9 +2707,12 @@ $mdi-icons: (
   "github": F02A4,
   "gitlab": F0BA0,
   "glass-cocktail": F0356,
+  "glass-cocktail-off": F15E6,
   "glass-flute": F02A5,
   "glass-mug": F02A6,
+  "glass-mug-off": F15E7,
   "glass-mug-variant": F1116,
+  "glass-mug-variant-off": F15E8,
   "glass-pint-outline": F130D,
   "glass-stange": F02A7,
   "glass-tulip": F02A8,
@@ -2858,6 +2915,7 @@ $mdi-icons: (
   "home": F02DC,
   "home-account": F0826,
   "home-alert": F087B,
+  "home-alert-outline": F15D0,
   "home-analytics": F0EBA,
   "home-assistant": F07D0,
   "home-automation": F07D1,
@@ -2907,6 +2965,9 @@ $mdi-icons: (
   "hops": F02DF,
   "horizontal-rotate-clockwise": F10F3,
   "horizontal-rotate-counterclockwise": F10F4,
+  "horse": F15BF,
+  "horse-human": F15C0,
+  "horse-variant": F15C1,
   "horseshoe": F0A58,
   "hospital": F0FF6,
   "hospital-box": F02E0,
@@ -2926,6 +2987,7 @@ $mdi-icons: (
   "human-edit": F14E8,
   "human-female": F0649,
   "human-female-boy": F0A59,
+  "human-female-dance": F15C9,
   "human-female-female": F0A5A,
   "human-female-girl": F0A5B,
   "human-greeting": F064A,
@@ -3002,6 +3064,7 @@ $mdi-icons: (
   "image-size-select-actual": F0C8D,
   "image-size-select-large": F0C8E,
   "image-size-select-small": F0C8F,
+  "image-text": F160D,
   "import": F02FA,
   "inbox": F0687,
   "inbox-arrow-down": F02FB,
@@ -3142,6 +3205,7 @@ $mdi-icons: (
   "language-r": F07D4,
   "language-ruby": F0D2D,
   "language-ruby-on-rails": F0ACF,
+  "language-rust": F1617,
   "language-swift": F06E5,
   "language-typescript": F06E6,
   "language-xaml": F0673,
@@ -3238,10 +3302,12 @@ $mdi-icons: (
   "location-exit": F0FC5,
   "lock": F033E,
   "lock-alert": F08EE,
+  "lock-alert-outline": F15D1,
   "lock-check": F139A,
   "lock-clock": F097F,
   "lock-open": F033F,
   "lock-open-alert": F139B,
+  "lock-open-alert-outline": F15D2,
   "lock-open-check": F139C,
   "lock-open-outline": F0340,
   "lock-open-variant": F0FC6,
@@ -3289,6 +3355,7 @@ $mdi-icons: (
   "mailbox-outline": F0D8C,
   "mailbox-up": F0D8D,
   "mailbox-up-outline": F0D8E,
+  "manjaro": F160A,
   "map": F034D,
   "map-check": F0EBC,
   "map-check-outline": F0EBD,
@@ -3324,6 +3391,8 @@ $mdi-icons: (
   "map-marker-remove-variant": F0F0A,
   "map-marker-right": F12DC,
   "map-marker-right-outline": F12DE,
+  "map-marker-star": F1608,
+  "map-marker-star-outline": F1609,
   "map-marker-up": F1103,
   "map-minus": F0981,
   "map-outline": F0982,
@@ -3505,6 +3574,9 @@ $mdi-icons: (
   "moon-waxing-crescent": F0F67,
   "moon-waxing-gibbous": F0F68,
   "moped": F1086,
+  "moped-electric": F15B7,
+  "moped-electric-outline": F15B8,
+  "moped-outline": F15B9,
   "more": F037B,
   "mother-heart": F1314,
   "mother-nurse": F0D21,
@@ -3517,6 +3589,7 @@ $mdi-icons: (
   "motion-sensor": F0D91,
   "motion-sensor-off": F1435,
   "motorbike": F037C,
+  "motorbike-electric": F15BA,
   "mouse": F037D,
   "mouse-bluetooth": F098B,
   "mouse-move-down": F1550,
@@ -3583,12 +3656,14 @@ $mdi-icons: (
   "music-rest-quarter": F0F7A,
   "music-rest-sixteenth": F0F7B,
   "music-rest-whole": F0F7C,
+  "mustache": F15DE,
   "nail": F0DDF,
   "nas": F08F3,
   "nativescript": F0880,
   "nature": F038E,
   "nature-people": F038F,
   "navigation": F0390,
+  "navigation-outline": F1607,
   "near-me": F05CD,
   "necklace": F0F0B,
   "needle": F0391,
@@ -3644,8 +3719,14 @@ $mdi-icons: (
   "notebook-check-outline": F14F6,
   "notebook-edit": F14E7,
   "notebook-edit-outline": F14E9,
+  "notebook-minus": F1610,
+  "notebook-minus-outline": F1611,
   "notebook-multiple": F0E55,
   "notebook-outline": F0EBF,
+  "notebook-plus": F1612,
+  "notebook-plus-outline": F1613,
+  "notebook-remove": F1614,
+  "notebook-remove-outline": F1615,
   "notification-clear-all": F039F,
   "npm": F06F7,
   "nuke": F06A4,
@@ -3736,6 +3817,7 @@ $mdi-icons: (
   "numeric-9-plus-circle": F0CB2,
   "numeric-9-plus-circle-outline": F0CB3,
   "numeric-negative-1": F1052,
+  "numeric-positive-1": F15CB,
   "nut": F06F8,
   "nutrition": F03C2,
   "nuxt": F1106,
@@ -3767,6 +3849,7 @@ $mdi-icons: (
   "openid": F03CD,
   "opera": F03CE,
   "orbit": F0018,
+  "orbit-variant": F15DB,
   "order-alphabetical-ascending": F020D,
   "order-alphabetical-descending": F0D07,
   "order-bool-ascending": F02BE,
@@ -4169,6 +4252,7 @@ $mdi-icons: (
   "ray-start": F0442,
   "ray-start-arrow": F0443,
   "ray-start-end": F0444,
+  "ray-start-vertex-end": F15D8,
   "ray-vertex": F0445,
   "react": F0708,
   "read": F0447,
@@ -4265,6 +4349,7 @@ $mdi-icons: (
   "rewind-10": F0D2A,
   "rewind-30": F0D96,
   "rewind-5": F11F9,
+  "rewind-60": F160C,
   "rewind-outline": F070A,
   "rhombus": F070B,
   "rhombus-medium": F0A10,
@@ -4274,6 +4359,8 @@ $mdi-icons: (
   "rhombus-split-outline": F14DD,
   "ribbon": F0460,
   "rice": F07EA,
+  "rickshaw": F15BB,
+  "rickshaw-electric": F15BC,
   "ring": F07EB,
   "rivet": F0E60,
   "road": F0461,
@@ -4363,6 +4450,8 @@ $mdi-icons: (
   "school": F0474,
   "school-outline": F1180,
   "scissors-cutting": F0A6B,
+  "scooter": F15BD,
+  "scooter-electric": F15BE,
   "scoreboard": F127E,
   "scoreboard-outline": F127F,
   "screen-rotation": F0475,
@@ -4522,9 +4611,12 @@ $mdi-icons: (
   "shield-sync": F11A2,
   "shield-sync-outline": F11A3,
   "ship-wheel": F0833,
+  "shoe-ballet": F15CA,
+  "shoe-cleat": F15C7,
   "shoe-formal": F0B47,
   "shoe-heel": F0B48,
   "shoe-print": F0DFA,
+  "shoe-sneaker": F15C8,
   "shopping": F049A,
   "shopping-music": F049B,
   "shopping-outline": F11D5,
@@ -4576,7 +4668,10 @@ $mdi-icons: (
   "silverware-variant": F04A6,
   "sim": F04A7,
   "sim-alert": F04A8,
+  "sim-alert-outline": F15D3,
   "sim-off": F04A9,
+  "sim-off-outline": F15D4,
+  "sim-outline": F15D5,
   "simple-icons": F131D,
   "sina-weibo": F0ADF,
   "sine-wave": F095B,
@@ -5100,6 +5195,7 @@ $mdi-icons: (
   "toothbrush": F1129,
   "toothbrush-electric": F112C,
   "toothbrush-paste": F112A,
+  "torch": F1606,
   "tortoise": F0D3B,
   "toslink": F12B8,
   "tournament": F09AE,
@@ -5222,6 +5318,9 @@ $mdi-icons: (
   "unfold-more-vertical": F0761,
   "ungroup": F0550,
   "unicode": F0ED0,
+  "unicorn": F15C2,
+  "unicorn-variant": F15C3,
+  "unicycle": F15E5,
   "unity": F06AF,
   "unreal": F09B1,
   "untappd": F0551,
@@ -5521,6 +5620,7 @@ $mdi-icons: (
   "window-shutter": F111C,
   "window-shutter-alert": F111D,
   "window-shutter-open": F111E,
+  "windsock": F15FA,
   "wiper": F0AE9,
   "wiper-wash": F0DA6,
   "wizard-hat": F1477,
