--- a/docs/css/andes-font-codes.css
+++ b/docs/css/andes-font-codes.css
@@ -621,3 +621,4 @@
 .adi-fullscreen:before { content: '\ea6b'; } /* '' */
 .adi-star-off-outline:before { content: '\ea6c'; } /* '' */
 .adi-star-off:before { content: '\ea6d'; } /* '' */
+.adi-database-search:before { content: '\ea6e'; } /* '' */
