--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -621,4 +621,5 @@ $adi-icons: (
      "fullscreen": ea6b,
      "star-off-outline": ea6c,
      "star-off": ea6d,
+     "database-search": ea6e,
 );
