--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -119,7 +119,6 @@ $adi-icons: (
      "ginecologia": e877,
      "giro": e878,
      "hallazgo": e879,
-     "historial": e87a,
      "hombre-caminando": e87b,
      "hombre-corriendo": e87c,
      "hospital": e87d,
@@ -274,7 +273,6 @@ $adi-icons: (
      "checkbox-blank-circle-1": e911,
      "checkbox-blank-circle-outline": e912,
      "checkbox-blank-circle-outline-1": e913,
-     "chevron-up": e914,
      "city": e915,
      "clipboard": e916,
      "clipboard-account": e917,
@@ -481,11 +479,14 @@ $adi-icons: (
      "checkbox-blank-circle-outline-2": e9e0,
      "checkbox-blank-outline": e9e1,
      "checkbox-marked": e9e2,
-     "chevron-double-left": e9e3,
-     "chevron-double-right": e9e4,
+     "chevron-up": e914,
      "chevron-down": e9e5,
      "chevron-left": e9e6,
      "chevron-right": e9e7,
+     "chevron-double-up": ea70,
+     "chevron-double-down": ea71,
+     "chevron-double-left": e9e3,
+     "chevron-double-right": e9e4,
      "compare": e9e8,
      "content-copy": e9e9,
      "content-paste": e9ea,
@@ -622,4 +623,5 @@ $adi-icons: (
      "star-off-outline": ea6c,
      "star-off": ea6d,
      "database-search": ea6e,
+     "historial": e87a,
 );
