--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -624,4 +624,5 @@ $adi-icons: (
      "star-off": ea6d,
      "database-search": ea6e,
      "historial": e87a,
+     "lupa-mano-corazon": ea6f,
 );
