--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -270,9 +270,7 @@ $adi-icons: (
      "check": e90e,
      "checkbox-blank": e90f,
      "checkbox-blank-circle": e910,
-     "checkbox-blank-circle-1": e911,
      "checkbox-blank-circle-outline": e912,
-     "checkbox-blank-circle-outline-1": e913,
      "city": e915,
      "clipboard": e916,
      "clipboard-account": e917,
@@ -284,8 +282,6 @@ $adi-icons: (
      "close-circle-outline": e91d,
      "comment": e91e,
      "comment-outline": e91f,
-     "dice-2": e920,
-     "dice-3": e921,
      "dice-4": e922,
      "dice-5": e923,
      "dice-6": e924,
@@ -334,7 +330,6 @@ $adi-icons: (
      "message-alert": e94f,
      "numeric-2-box-multiple-outline": e950,
      "open-in-app": e951,
-     "opera": e952,
      "package": e953,
      "panda": e954,
      "pause": e955,
@@ -622,7 +617,12 @@ $adi-icons: (
      "fullscreen": ea6b,
      "star-off-outline": ea6c,
      "star-off": ea6d,
-     "database-search": ea6e,
      "historial": e87a,
-     "lupa-mano-corazon": ea6f,
+     "database-search": ea6e,
+     "dice-3": e921,
+     "dice-2": e920,
+     "exportar-corazon": ea72,
+     "checkbox-blank-circle-1": e911,
+     "checkbox-blank-circle-outline-1": e913,
+     "opera": e952,
 );
