--- a/docs/css/andes-font-codes.css
+++ b/docs/css/andes-font-codes.css
@@ -272,9 +272,7 @@
 .adi-check:before { content: '\e90e'; } /* '' */
 .adi-checkbox-blank:before { content: '\e90f'; } /* '' */
 .adi-checkbox-blank-circle:before { content: '\e910'; } /* '' */
-.adi-checkbox-blank-circle-1:before { content: '\e911'; } /* '' */
 .adi-checkbox-blank-circle-outline:before { content: '\e912'; } /* '' */
-.adi-checkbox-blank-circle-outline-1:before { content: '\e913'; } /* '' */
 .adi-chevron-up:before { content: '\e914'; } /* '' */
 .adi-city:before { content: '\e915'; } /* '' */
 .adi-clipboard:before { content: '\e916'; } /* '' */
@@ -337,7 +335,6 @@
 .adi-message-alert:before { content: '\e94f'; } /* '' */
 .adi-numeric-2-box-multiple-outline:before { content: '\e950'; } /* '' */
 .adi-open-in-app:before { content: '\e951'; } /* '' */
-.adi-opera:before { content: '\e952'; } /* '' */
 .adi-package:before { content: '\e953'; } /* '' */
 .adi-panda:before { content: '\e954'; } /* '' */
 .adi-pause:before { content: '\e955'; } /* '' */
@@ -622,6 +619,6 @@
 .adi-star-off-outline:before { content: '\ea6c'; } /* '' */
 .adi-star-off:before { content: '\ea6d'; } /* '' */
 .adi-database-search:before { content: '\ea6e'; } /* '' */
-.adi-lupa-mano-corazon:before { content: '\ea6f'; } /* '' */
 .adi-chevron-double-up:before { content: '\ea70'; } /* '' */
 .adi-chevron-double-down:before { content: '\ea71'; } /* '' */
+.adi-exportar-corazon:before { content: '\ea72'; } /* '' */
