--- a/docs/css/andes-font.css
+++ b/docs/css/andes-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'andes-font';
-  src: url('../font/andes-font.eot?41658401');
-  src: url('../font/andes-font.eot?41658401#iefix') format('embedded-opentype'),
-       url('../font/andes-font.woff2?41658401') format('woff2'),
-       url('../font/andes-font.woff?41658401') format('woff'),
-       url('../font/andes-font.ttf?41658401') format('truetype'),
-       url('../font/andes-font.svg?41658401#andes-font') format('svg');
+  src: url('../font/andes-font.eot?39367098');
+  src: url('../font/andes-font.eot?39367098#iefix') format('embedded-opentype'),
+       url('../font/andes-font.woff2?39367098') format('woff2'),
+       url('../font/andes-font.woff?39367098') format('woff'),
+       url('../font/andes-font.ttf?39367098') format('truetype'),
+       url('../font/andes-font.svg?39367098#andes-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'andes-font';
-    src: url('../font/andes-font.svg?41658401#andes-font') format('svg');
+    src: url('../font/andes-font.svg?39367098#andes-font') format('svg');
   }
 }
 */
@@ -328,6 +328,7 @@
 .adi-check:before { content: '\e90e'; } /* '' */
 .adi-checkbox-blank:before { content: '\e90f'; } /* '' */
 .adi-checkbox-blank-circle:before { content: '\e910'; } /* '' */
+.adi-avion:before { content: '\e911'; } /* '' */
 .adi-checkbox-blank-circle-outline:before { content: '\e912'; } /* '' */
 .adi-chevron-up:before { content: '\e914'; } /* '' */
 .adi-city:before { content: '\e915'; } /* '' */
