--- a/docs/css/andes-font.css
+++ b/docs/css/andes-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'andes-font';
-  src: url('../font/andes-font.eot?39367098');
-  src: url('../font/andes-font.eot?39367098#iefix') format('embedded-opentype'),
-       url('../font/andes-font.woff2?39367098') format('woff2'),
-       url('../font/andes-font.woff?39367098') format('woff'),
-       url('../font/andes-font.ttf?39367098') format('truetype'),
-       url('../font/andes-font.svg?39367098#andes-font') format('svg');
+  src: url('../font/andes-font.eot?88602101');
+  src: url('../font/andes-font.eot?88602101#iefix') format('embedded-opentype'),
+       url('../font/andes-font.woff2?88602101') format('woff2'),
+       url('../font/andes-font.woff?88602101') format('woff'),
+       url('../font/andes-font.ttf?88602101') format('truetype'),
+       url('../font/andes-font.svg?88602101#andes-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'andes-font';
-    src: url('../font/andes-font.svg?39367098#andes-font') format('svg');
+    src: url('../font/andes-font.svg?88602101#andes-font') format('svg');
   }
 }
 */
@@ -330,6 +330,7 @@
 .adi-checkbox-blank-circle:before { content: '\e910'; } /* '' */
 .adi-avion:before { content: '\e911'; } /* '' */
 .adi-checkbox-blank-circle-outline:before { content: '\e912'; } /* '' */
+.adi-mascara-bolsa:before { content: '\e913'; } /* '' */
 .adi-chevron-up:before { content: '\e914'; } /* '' */
 .adi-city:before { content: '\e915'; } /* '' */
 .adi-clipboard:before { content: '\e916'; } /* '' */
@@ -392,6 +393,7 @@
 .adi-message-alert:before { content: '\e94f'; } /* '' */
 .adi-numeric-2-box-multiple-outline:before { content: '\e950'; } /* '' */
 .adi-open-in-app:before { content: '\e951'; } /* '' */
+.adi-ventilador-arm:before { content: '\e952'; } /* '' */
 .adi-package:before { content: '\e953'; } /* '' */
 .adi-panda:before { content: '\e954'; } /* '' */
 .adi-pause:before { content: '\e955'; } /* '' */
@@ -676,6 +678,7 @@
 .adi-star-off-outline:before { content: '\ea6c'; } /* '' */
 .adi-star-off:before { content: '\ea6d'; } /* '' */
 .adi-database-search:before { content: '\ea6e'; } /* '' */
+.adi-casco:before { content: '\ea6f'; } /* '' */
 .adi-chevron-double-up:before { content: '\ea70'; } /* '' */
 .adi-chevron-double-down:before { content: '\ea71'; } /* '' */
 .adi-exportar-corazon:before { content: '\ea72'; } /* '' */
