--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -623,7 +623,7 @@ $adi-icons: (
      "dice-2": e920,
      "exportar-corazon": ea72,
      "avion": e911,
-     "checkbox-blank-circle-1": e911,
-     "checkbox-blank-circle-outline-1": e913,
-     "opera": e952,
+     "mascara-bolsa": e913,
+     "ventilador-arm": e952,
+     "casco": ea6f,
 );
