--- a/css/andes-icons.css
+++ b/css/andes-icons.css
@@ -1889,14 +1889,23 @@
 .adi-avion:before {
   content: "\e911"; }
 
-.adi-mascara-bolsa:before {
-  content: "\e913"; }
-
-.adi-ventilador-arm:before {
-  content: "\e952"; }
-
 .adi-casco:before {
   content: "\ea6f"; }
+
+.adi-respirador-mr:before {
+  content: "\ea74"; }
+
+.adi-respirador-ambu:before {
+  content: "\ea76"; }
+
+.adi-respirador-arm:before {
+  content: "\ea77"; }
+
+.adi-respirador-cnaf:before {
+  content: "\ea78"; }
+
+.adi-respirador-cnbf:before {
+  content: "\ea73"; }
 
 .adi-blank:before {
   content: "\F68C";
