--- a/docs/css/andes-font-codes.css
+++ b/docs/css/andes-font-codes.css
@@ -274,7 +274,6 @@
 .adi-checkbox-blank-circle:before { content: '\e910'; } /* '' */
 .adi-avion:before { content: '\e911'; } /* '' */
 .adi-checkbox-blank-circle-outline:before { content: '\e912'; } /* '' */
-.adi-mascara-bolsa:before { content: '\e913'; } /* '' */
 .adi-chevron-up:before { content: '\e914'; } /* '' */
 .adi-city:before { content: '\e915'; } /* '' */
 .adi-clipboard:before { content: '\e916'; } /* '' */
@@ -337,7 +336,6 @@
 .adi-message-alert:before { content: '\e94f'; } /* '' */
 .adi-numeric-2-box-multiple-outline:before { content: '\e950'; } /* '' */
 .adi-open-in-app:before { content: '\e951'; } /* '' */
-.adi-ventilador-arm:before { content: '\e952'; } /* '' */
 .adi-package:before { content: '\e953'; } /* '' */
 .adi-panda:before { content: '\e954'; } /* '' */
 .adi-pause:before { content: '\e955'; } /* '' */
@@ -626,3 +624,8 @@
 .adi-chevron-double-up:before { content: '\ea70'; } /* '' */
 .adi-chevron-double-down:before { content: '\ea71'; } /* '' */
 .adi-exportar-corazon:before { content: '\ea72'; } /* '' */
+.adi-respirador-cnbf:before { content: '\ea73'; } /* '' */
+.adi-respirador-mr:before { content: '\ea74'; } /* '' */
+.adi-respirador-ambu:before { content: '\ea76'; } /* '' */
+.adi-respirador-arm:before { content: '\ea77'; } /* '' */
+.adi-respirador-cnaf:before { content: '\ea78'; } /* '' */
