--- a/docs/css/andes-font-ie7.css
+++ b/docs/css/andes-font-ie7.css
@@ -285,7 +285,6 @@
 .adi-checkbox-blank-circle { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe910;&nbsp;'); }
 .adi-avion { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe911;&nbsp;'); }
 .adi-checkbox-blank-circle-outline { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe912;&nbsp;'); }
-.adi-mascara-bolsa { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe913;&nbsp;'); }
 .adi-chevron-up { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe914;&nbsp;'); }
 .adi-city { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe915;&nbsp;'); }
 .adi-clipboard { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe916;&nbsp;'); }
@@ -348,7 +347,6 @@
 .adi-message-alert { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe94f;&nbsp;'); }
 .adi-numeric-2-box-multiple-outline { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe950;&nbsp;'); }
 .adi-open-in-app { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe951;&nbsp;'); }
-.adi-ventilador-arm { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe952;&nbsp;'); }
 .adi-package { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe953;&nbsp;'); }
 .adi-panda { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe954;&nbsp;'); }
 .adi-pause { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe955;&nbsp;'); }
@@ -637,3 +635,8 @@
 .adi-chevron-double-up { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea70;&nbsp;'); }
 .adi-chevron-double-down { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea71;&nbsp;'); }
 .adi-exportar-corazon { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea72;&nbsp;'); }
+.adi-respirador-cnbf { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea73;&nbsp;'); }
+.adi-respirador-mr { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea74;&nbsp;'); }
+.adi-respirador-ambu { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea76;&nbsp;'); }
+.adi-respirador-arm { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea77;&nbsp;'); }
+.adi-respirador-cnaf { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea78;&nbsp;'); }
