--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -623,7 +623,10 @@ $adi-icons: (
      "dice-2": e920,
      "exportar-corazon": ea72,
      "avion": e911,
-     "mascara-bolsa": e913,
-     "ventilador-arm": e952,
      "casco": ea6f,
+     "respirador-mr": ea74,
+     "respirador-ambu": ea76,
+     "respirador-arm": ea77,
+     "respirador-cnaf": ea78,
+     "respirador-cnbf": ea73,
 );
